--- a/build.gradle
+++ b/build.gradle
@@ -89,10 +89,10 @@ curse {
     dependsOn 'reobf'
     
     onlyIf {
-        return project.hasProperty('cp_curseforge_key') && System.getenv("CURSE") != null && System.getenv("CURSE").equalsIgnoreCase("true")
+        return project.hasProperty('curseforge_key') && System.getenv("CURSE") != null && System.getenv("CURSE").equalsIgnoreCase("true")
     }
 
-    if (project.hasProperty('cp_curseforge_key')) apiKey = project.curseforge_key
+    if (project.hasProperty('curseforge_key')) apiKey = project.curseforge_key
     projectId = project.curse_projectId
     changelog = System.getenv("CHANGELOG").equals("none") ? getChangelogText() : System.getenv("CHANGELOG")
     releaseType = "${curse_type}".toString()
