--- a/gradle.properties
+++ b/gradle.properties
@@ -3,8 +3,8 @@ forge_version=10.13.4.1490
 endercore_version=0.0.1.17_alpha
 NEI_version=1.0.5.111
 
-mod_version=0.0.1
+mod_version=1.0.0
 
-curse_type=alpha
+curse_type=release
 
 curse_projectId=235208
