--- a/build.gradle
+++ b/build.gradle
@@ -94,7 +94,7 @@ curse {
 
     if (project.hasProperty('curseforge_key')) apiKey = project.curseforge_key
     projectId = project.curse_projectId
-    changelog = System.getenv("CHANGELOG").equals("none") ? getChangelogText() : System.getenv("CHANGELOG")
+    changelog = System.getenv("CHANGELOG").equals("none") ? getChangelog() : System.getenv("CHANGELOG")
     releaseType = "${curse_type}".toString()
     additionalArtifact deobfJar, sourceJar
     relatedProject 'endercore'
