--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,9 @@
-minecraft_version=1.7.10
-forge_version=10.13.4.1490
-endercore_version=0.0.1.17_alpha
-NEI_version=1.0.5.111
+minecraft_version=1.10.2
+forge_version=12.18.3.2185
+endercore_version=0.4.1.64-beta
 
-mod_version=1.0.1
+mod_version=1.1.0
 
-curse_type=release
+curse_type=beta
 
 curse_projectId=235208
