--- a/build.gradle
+++ b/build.gradle
@@ -88,18 +88,19 @@ if (JavaVersion.current().isJava8Compatible()) {
 
 build.dependsOn sourceJar
 
-/*
-curse {
-    dependsOn 'reobf'
-    
-    onlyIf {
-        return project.hasProperty('curseforge_key') && System.getenv("CURSE") != null && System.getenv("CURSE").equalsIgnoreCase("true")
+curseforge {
+    if (project.hasProperty('curseforge_key')) {
+        apiKey = project.curseforge_key
     }
 
-    if (project.hasProperty('curseforge_key')) apiKey = project.curseforge_key
-    projectId = project.curse_projectId
-    changelog = System.getenv("CHANGELOG").equals("none") ? getChangelog() : System.getenv("CHANGELOG")
-    releaseType = "${curse_type}".toString()
-    relatedProject 'endercore'
+    project {
+        id = project.curse_projectId
+        changelog = System.getenv('CHANGELOG') == null || System.getenv('CHANGELOG').equals('none') ? getChangelog() : System.getenv('CHANGELOG')
+        changelogType = 'html'
+        releaseType = project.curse_type
+		addGameVersion '1.10.2'
+        mainArtifact(jar) {
+            displayName = "ColorblindHelper - ${version}"
+        }
+    }
 }
-*/
