--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
-minecraft_version=1.10.2
-forge_version=12.18.3.2185
-endercore_version=0.4.1.65-beta
+minecraft_version=1.12.2
+forge_version=14.23.2.2611
+endercore_version=1.12.2-0.5.17
 
 mod_version=1.1.1
 
