--- a/gradle.properties
+++ b/gradle.properties
@@ -2,8 +2,8 @@ minecraft_version=1.10.2
 forge_version=12.18.3.2185
 endercore_version=0.4.1.65-beta
 
-mod_version=1.1.1
+mod_version=1.1.2
 
-curse_type=beta
+curse_type=release
 
 curse_projectId=235208
